# sw-calculator

./: .gitignore  AbstractModelProvider.cpp  AbstractModelProvider.h  CMakeLists.txt  ChannelConvolutionPdf.cpp  ChannelConvolutionPdf.h  CompositeModelProvider.cpp  CompositeModelProvider.h  Constants.cpp  DampLorentzPdf.cpp  DampLorentzPdf.h  FileUtils.cpp  FileUtils.h  GaussianPdf.cpp  GaussianPdf.h  HistProcessor.cpp  HistProcessor.h  IndirectParamPdf.cpp  IndirectParamPdf.h  LorentzianPdf.cpp  LorentzianPdf.h  Makefile  OrthogonalPdf.cpp  OrthogonalPdf.h  ParabolaGaussModelProvider.cpp  ParabolaLorentzianModelProvider.cpp  ParabolaLorentzianModelProvider.h  ParabolaPdf.cpp  ParabolaPdf.h  README.md  RootHelper.cpp  RootHelper.h  SWCalculatorFrame.cpp  SWCalculatorFrame.h  SWCalculatorFrameDict.cpp  SWCalculatorFrameDict_rdict.pcm  SWCalculatorFrameLinkDef.h  SimpleParabolaPdf.cpp  SimpleParabolaPdf.h  StringUtils.cpp  (+4 more)
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.properties  project.xml
nbproject/private/: configurations.xml  private.xml
resources/: sw-calculator.desktop  sw-calculator.icns  sw-calculator.pkg  sw-calculator.psd  sw-calculator.xpm
src/: LinkDef.h  LinkDef.hpp  SWCalculatorDict.cpp  SWCalculatorFrameDict.cpp  SWCalculatorLinkDef.h  main.cc  main.cpp
src/event/: Event.h  EventBus.cpp  EventBus.h  EventHandler.h  HandlerRegistration.h  Object.h
src/event/events/: HistogramImportedEvent.cpp  HistogramImportedEvent.h  IsTwoDetectorEvent.cpp  IsTwoDetectorEvent.h  SourceHistogramImportedEvent.cpp  SourceHistogramImportedEvent.h
src/model/: Constants.cpp  Constants.h  DoublePair.cpp  DoublePair.h  Model.cpp  Model.h  ParametersPool.cpp  ParametersPool.h
src/roofit/: AbstractModelProvider.cpp  AbstractModelProvider.h  AddPdf.cpp  AddPdf.h  BackgroundPdf.cpp  BackgroundPdf.h  CompositeModelProvider.cpp  CompositeModelProvider.h  DampLorentzPdf.cpp  DampLorentzPdf.h  GaussianPdf.cpp  GaussianPdf.h  IndirectParamPdf.cpp  IndirectParamPdf.h  LorentzianPdf.cpp  LorentzianPdf.h  OrthogonalPdf.cpp  OrthogonalPdf.h  ParabolaGaussModelProvider.cpp  ParabolaGaussModelProvider.h  ParabolaLorentzianModelProvider.cpp  ParabolaPdf.cpp  ParabolaPdf.h  PdfProvider.cpp  PdfProvider.h  ReverseAddPdf.cpp  ReverseAddPdf.h
src/roofit/pdfs/: BackgroundPdf.cpp  BackgroundPdf.h  DampLorentzPdf.cpp  DampLorentzPdf.h  DeltaPdf.cpp  DeltaPdf.h  GaussianPdf.cpp  GaussianPdf.h  LorentzianPdf.cpp  LorentzianPdf.h  OrthogonalPdf.cpp  OrthogonalPdf.h  ParabolaPdf.cpp  ParabolaPdf.h  StepPdf.cpp  StepPdf.h
src/util/: Debug.h  FileUtils.cpp  FileUtils.h  GraphicsHelper.cpp  GraphicsHelper.h  HistProcessor.cpp  HistProcessor.h  MathUtil.cpp  MathUtil.h  RootHelper.cpp  RootHelper.h  StringUtils.cpp  StringUtils.h  UiHelper.cpp  UiHelper.h  Variable.cpp  Variable.h
src/widgets/: AbstractPresenter.h  AbstractView.h  MainView.cpp  MainView.h  MyMainFrame.cpp  MyMainFrame.h
src/widgets/frames/: ModalDialogFrame.cpp  ModalDialogFrame.h  RooRealVarFrame.cpp  RooRealVarFrame.h  RooRealVarListFrame.cpp  RooRealVarListFrame.h
src/widgets/importSpectrumWidget/: AbstractImportSpectrumPresenter.cpp  AbstractImportSpectrumPresenter.h  AbstractImportSpectrumView.cpp  AbstractImportSpectrumView.h  IImportSpectrumView.h  ImportComponentPresenter.cpp  ImportComponentPresenter.h  ImportComponentView.cpp  ImportComponentView.h  ImportSourceSpectrumPresenter.cpp  ImportSourceSpectrumPresenter.h  ImportSourceSpectrumView.cpp  ImportSourceSpectrumView.h  ImportSpectrumPresenter.cpp  ImportSpectrumPresenter.h  ImportSpectrumView.cpp  ImportSpectrumView.h
src/widgets/overrides/: MyTGNumberEntry.cpp  MyTGNumberEntry.h
src/widgets/rooRealVarWidget/: RooRealVarPresenter.cpp  RooRealVarPresenter.h  RooRealVarView.cpp  RooRealVarView.h
src/widgets/swCalculatorWidget/: SWCalculatorFrame.cpp  SWCalculatorPresenter.cpp  SWCalculatorPresenter.h  SWCalculatorView.cpp  SWCalculatorView.h
src/widgets/testView/: TTripleSliderDemo.cpp  TTripleSliderDemo.h
test-specta/: 2-6-2016-10.0.0.3-Al-Single-13768.csv  2017-07-23-Fe-Annealed-16384bins-4.5dead-38100-counts-max-398600s.txt  2017-08-02-Al-Annealed-16384bins-4.2dead-57000-counts-max-633000s-doppler.txt  2017-08-24-Al-3.3-1.7-no-bkg-cdb-kapton-results.txt  2017-08-24-Al-3.3-1.7-no-bkg-cdb.txt  2017-08-24-Al-Annealed-16384bins-doppler-3.3-1.7.txt  2017-08-24-Al-Annealed-doppler-3.3-1.7-bg.txt  2017-09-02-Al-Annealed-16384bins-4.2dead-57000-counts-max-633000s-doppler.txt  2017-10-11-Kapton-3.3-1.7-no-bkg-cdb.txt  2018-08-11-Al2O3_1um-16384bins-4.6-5.0dead-11500-counts-max-157000s-10in-10in-28cps-3.3+1.7-no-bkg-cdb.txt  2018-08-16-Al2O3_3um-16384bins-4.57-5.74dead-152500s-10in-10in-42cps-3.3+1.7-no-bkg-cdb.txt  Al_broadening_all.txt  unnamed
test-specta/BGSU/: 2017-08-24-Al-3.3-1.7-cdb.txt  2017-08-24-Al-3.3-1.7-no-bkg-cdb-kapton-results.txt  2018-07-25-Kapton-5milx10each-16384bins-4.8dead-19700-counts-max-72500s-10in-10in-new-source-3.3+1.7-no-bkg-cdb.txt  2022-01-05-Al-Annealed-16384bins-9dead-24h-10.0.0.3.csv  2022-01-05-Al-Annealed-16384bins-9dead-24h-10.0.0.4.csv
test-specta/ITEP/: 2022-02-23-Na22+Kapton-cal.SPE  2024-02-01_Al+Na22_2-cal.SPE  Al_22Na_07_June_2021.txt  Background_40days_23-07-2020.txt  Cu_22Na_08_June_2021.txt  Fe_22Na_10_June_2021.txt  Fe_22Na_10_June_2021.txt-data-columns.txt  Kapton_01_Oct_2021.txt  Kapton_30_Sept_2021.txt  W_22Na_15_June_2021.txt
wolfram/: exp-1d.nb  exp-2d.nb  gaus-1d.nb  gaus-2d.nb  par-1d.nb  par-2d.nb
